# jerbito_proj

./: .replit  LICENSE  README.md  dune-project  markov.opam  projet.md  replit.nix
src/: data.ml  data.mli  dune  markov.ml  markov.mli  predefined.ml  sLMap.ml
test/: dune  exemples.ml  test_markov.ml
