(lang dune 3.11)

(name markov)

(generate_opam_files true)

(source
 (github lyrm/jerbito_proj))

(authors "Carine Morel")

(maintainers "Carine Morel")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name markov)
 (synopsis "CFA-Instat project 2024")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
